# gascountry

.agent/: events.jsonl  scratchpad.md  summary.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-INTEGRATION-AUDIT.md  v1-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/resolved/: clone-connection-lost.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-cleanup/: 01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-core-clone/: 02-01-PLAN.md  02-02-PLAN.md  02-VERIFICATION.md
.planning/phases/03-clone-progress/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-error-handling/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-authentication/: 05-01-PLAN.md  05-02-PLAN.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/06-repository-manager/: 06-VERIFICATION.md
.planning/phases/07-agent-orchestrator-selection/: 07-02-SUMMARY.md
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/api/: config.rs  git.rs  mod.rs  repos.rs  sessions.rs
backend/src/db/: mod.rs  models.rs  schema.rs
backend/src/git/: mod.rs
backend/src/ralph/: mod.rs
backend/src/ws/: connections.rs  messages.rs  mod.rs
frontend/.agent/: events.jsonl
frontend/src/api/: client.ts  hooks.ts  index.ts  types.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: useCloneProgress.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: ralphtown.ts
(+12 files in other folders)
