[package]
name = "ralphtown"
version = "0.1.0"
edition = "2024"
description = "Backend server for Ralphtown - a Ralph session manager"
authors = ["Ralph"]
license = "MIT"

[[bin]]
name = "ralphtown"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.33", features = ["bundled"] }
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
axum-test = "18"
tempfile = "3"
